# kaitai_struct_rust_runtime

./: .gitignore  Cargo.toml  LICENSE  README.md  clean.sh  clippy.toml  tests.sh
formats/: read_bytes.ksy  str_encodings.ksy  str_encodings_default.ksy  str_repeat.ksy  switch_cast.ksy  switch_cast_parent.ksy  switch_manual_int_size_eos.ksy  test_parent.ksy
src/: kaitai_stream.rs  kaitai_struct.rs  lib.rs  processors.rs  pt.rs
tests/: expr_0_tests.rs  expr_1_tests.rs  fixed_contents_tests.rs  grandparent_validation.rs  helpers_tests.rs  lifetime_validation.rs  process_coerce_bytes_tests.rs  process_rotate_tests.rs  process_to_user_tests.rs  process_xor4_const_tests.rs  process_xor4_value_tests.rs  process_xor_const_tests.rs  process_xor_value_tests.rs  read_bytes_tests.rs  str_encodings_default_tests.rs  str_encodings_tests.rs  str_encodings_utf16_tests.rs  str_eos_tests.rs  str_literals2_tests.rs  str_literals_tests.rs  str_pad_term_empty_tests.rs  str_pad_term_tests.rs  str_repeat_tests.rs  switch_bytearray_tests.rs  switch_cast_parent_tests.rs  switch_cast_tests.rs  switch_else_only_tests.rs  switch_integers2_tests.rs  switch_integers_tests.rs  switch_manual_int_else_tests.rs  switch_manual_int_size_else_tests.rs  switch_manual_int_size_eos_tests.rs  switch_manual_int_size_tests.rs  switch_manual_int_tests.rs  switch_manual_str_else_tests.rs  switch_manual_str_tests.rs  term_bytes_tests.rs  term_strz_tests.rs  term_u1_val_tests.rs  test_parent_tests.rs  (+5 more)
