[package]
name = "kaitai"
version = "0.2.0"
authors = ["Bradlee Speice <bradlee@speice.io>", "Aon"]
edition = "2021"
rust-version = "1.63"

[features]
type_name_of_val = []

[lints.rust]
redundant_imports = "warn"
trivial_casts = "warn"
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
min_ident_chars = "warn"

bool_to_int_with_if = "warn"
manual_assert = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
unreadable_literal = "warn"

[dependencies]
encoding-next = "0.3"
cp437 = "0.1"
unicode-segmentation = "1"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
